# TChem

./: .gitmodules  AUTHORS  BUILD.md  CHANGELOG.md  LICENSE  README.md  index.md
src/: .clang-format  CMakeLists.txt  FindGtest.cmake  FindKokkos.cmake  FindKokkosKernels.cmake  FindLAPACKE.cmake  FindMKL.cmake  FindOpenBLAS.cmake  FindTines.cmake  FindYAML.cmake
src/cmake/: TChemConfig.cmake.in
src/core/: CMakeLists.txt  TC_getthc9.cpp  TC_kmodint.cpp  TC_kmodint.hpp  TC_kmodint_surface.cpp  TC_kmodint_surface.hpp  TChem.hpp  TChem_AtmosphericChemistry.cpp  TChem_AtmosphericChemistry.hpp  TChem_CommandLineParser.hpp  TChem_Config.hpp.in  TChem_ConstantVolumeIgnitionReactor.cpp  TChem_ConstantVolumeIgnitionReactor.hpp  TChem_CpSpecMs.hpp  TChem_Driver.cpp  TChem_Driver.hpp  TChem_EnthalpyMass.cpp  TChem_EnthalpyMass.hpp  TChem_EntropyMass.cpp  TChem_EntropyMass.hpp  TChem_GkSurfGas.cpp  TChem_GkSurfGas.hpp  TChem_IgnitionZeroD.cpp  TChem_IgnitionZeroD.hpp  TChem_IgnitionZeroDNumJacobian.cpp  TChem_IgnitionZeroDNumJacobian.hpp  TChem_IgnitionZeroDNumJacobianFwd.cpp  TChem_IgnitionZeroDNumJacobianFwd.hpp  TChem_IgnitionZeroD_Internal.hpp  TChem_IgnitionZeroD_SacadoJacobian.cpp  TChem_IgnitionZeroD_SacadoJacobian.hpp  TChem_IgnitionZeroD_SacadoJacobianInternal.hpp  TChem_InitialCondSurface.cpp  TChem_InitialCondSurface.hpp  TChem_InternalEnergyMass.cpp  TChem_InternalEnergyMass.hpp  TChem_IsothermalTransientContStirredTankReactor.cpp  TChem_IsothermalTransientContStirredTankReactor.hpp  TChem_IsothermalTransientContStirredTankReactorNumJacobian.cpp  TChem_IsothermalTransientContStirredTankReactorNumJacobian.hpp  (+77 more)
src/core/aerosol_impl/: TChem_Impl_AtmosphericChemistry.hpp  TChem_Impl_AtmosphericChemistry_Problem.hpp  TChem_Impl_KForward.hpp  TChem_Impl_ReactionRatesAerosol.hpp
src/core/eti/: CMakeLists.txt  TChem_IgnitionZeroD_CVODE_ETI.in  TChem_IgnitionZeroD_ETI.in  TChem_IgnitionZeroD_SacadoJacobian_ETI.in  TChem_IsothermalTransientContStirredTankReactorSacadoJacobian_ETI.in  TChem_PlugFlowReactorSacadoJacobian_ETI.in  TChem_TransientContStirredTankReactorSacadoJacobian_ETI.in
src/core/impl/: TChem_Impl_ChebyshevForwardConstant.hpp  TChem_Impl_ConstantVolumeIgnitionReactorRHS.hpp  TChem_Impl_ConstantVolumeIgnitionReactorSmatrixSensitivityAnalysis.hpp  TChem_Impl_ConstantVolumeIgnitionReactorTangetLinearApproximationSourceTerm.hpp  TChem_Impl_CpMixMs.hpp  TChem_Impl_CpSpecMl.hpp  TChem_Impl_CpSpecMs.hpp  TChem_Impl_Crnd.hpp  TChem_Impl_DenseNanInf.hpp  TChem_Impl_DenseQR.hpp  TChem_Impl_DenseUTV.hpp  TChem_Impl_EnthalpySpecMl.hpp  TChem_Impl_EnthalpySpecMs.hpp  TChem_Impl_Entropy0SpecMl.hpp  TChem_Impl_Gk.hpp  TChem_Impl_IgnitionZeroDNumJacobian.hpp  TChem_Impl_IgnitionZeroDNumJacobianFwd.hpp  TChem_Impl_InitialCondSurface.hpp  TChem_Impl_IsothermalTransientContStirredTankReactorRHS.hpp  TChem_Impl_IsothermalTransientContStirredTankReactorSmatrix.hpp  TChem_Impl_Jacobian.hpp  TChem_Impl_JacobianReduced.hpp  TChem_Impl_JacobianVerification.hpp  TChem_Impl_KForwardReverse.hpp  TChem_Impl_KForwardReverseSurface.hpp  TChem_Impl_MolarConcentrations.hpp  TChem_Impl_MolarWeights.hpp  TChem_Impl_Ms2CpMixMs.hpp  TChem_Impl_NewtonSolver.hpp  TChem_Impl_NumericalJacobianCentralDifference.hpp  TChem_Impl_NumericalJacobianForwardDifference.hpp  TChem_Impl_NumericalJacobianRichardsonExtrapolation.hpp  TChem_Impl_PlugFlowReactorNumJacobian.hpp  TChem_Impl_PlugFlowReactorRHS.hpp  TChem_Impl_PlugFlowReactorReducedNumJacobian.hpp  TChem_Impl_PlugFlowReactorSmat.hpp  TChem_Impl_RateOfProgessJacobian.hpp  TChem_Impl_RateOfProgress.hpp  TChem_Impl_RateOfProgressInd.hpp  TChem_Impl_RateOfProgressSurface.hpp  (+19 more)
src/core/problems/: TChem_Impl_AlgebraicConstraintsSurface_Problem.hpp  TChem_Impl_ConstantVolumeIgnitionReactor.hpp  TChem_Impl_ConstantVolumeIgnitionReactor_Problem.hpp  TChem_Impl_IgnitionZeroD.hpp  TChem_Impl_IgnitionZeroD_Problem.hpp  TChem_Impl_IsothermalTransientContStirredTankReactor.hpp  (+8 more)
src/example/: CMakeLists.txt  TChem_AtmosphericChemistry.cpp  TChem_CheckPLOGreactions.cpp  TChem_ConstantVolumeIgnitionReactorSmatrixSensitivityAnalysis.cpp  TChem_DenseUTV.cpp  TChem_Driver.cpp  TChem_DriverIgnitionZeroD.F90  TChem_DriverModule.F90  TChem_DriverNetProductionRatePerMass.F90  TChem_Driver_C.cpp  TChem_GkSurfGas.cpp  TChem_IgnitionZeroD.cpp  TChem_IgnitionZeroDJacSacado.cpp  TChem_IgnitionZeroDJacobians.cpp  TChem_IgnitionZeroDSA.cpp  TChem_IgnitionZeroD_HostSingle.cpp  TChem_IgnitionZeroD_Jacobians.cpp  TChem_IgnitionZeroD_ModelVariation.cpp  TChem_IgnitionZeroD_SourceTermJacobian.cpp  TChem_InitialCondSurface.cpp  TChem_IsothermalTransientContStirredTankReactorRHS.cpp  TChem_Jacobian.cpp  TChem_JacobianSacado.cpp  TChem_JacobianVerification.cpp  TChem_KForwardReverse.cpp  TChem_KForwardReverseSurface.cpp  TChem_KForwardReverseSurfaceModelVariation.cpp  TChem_KForwardReverseSurfaceModelVarition.cpp  TChem_NetProductionRatePerMass.cpp  TChem_NetProductionRatePerMassNCAR.cpp  TChem_NetProductionRatePerMass_Yaml.cpp  TChem_NetProductionRateSurfacePerMass.cpp  TChem_NetProductionRateSurfacePerMass_Yaml.cpp  TChem_NewtonSolver.cpp  TChem_PlugFlowReactor.cpp  TChem_PlugFlowReactorJacobianSacado.cpp  TChem_PlugFlowReactorModelVariation.cpp  TChem_PlugFlowReactorRHS.cpp  TChem_PlugFlowReactorSmat.cpp  TChem_RateOfProgressJacobian.cpp  (+10 more)
src/git/: README  pre-commit
src/main/: CMakeLists.txt  TChem_JSON_Test.cpp  TChem_Main.cpp  TChem_Main_Util.cpp  TChem_Main_Util.hpp  input-const-volume-ignition-tla.json  input.json  sample.json
src/markdown/: README.md  api.md  build.md  cxx-interface.md  example-check-plog.md  example-constant-volume-ignition.md  example-plug-flow-reactor.md  example-transient-continuous-stirred-tank-reactor.md  example-zero-d-ignition.md  front.mdpp  future-work.md  input-file-spec.md  intro.md  python-interface.md  reaction-rates.md  thermodynamic-properties.md  time-integration.md
src/pytchem/: CMakeLists.txt  TChem_PyTChem.cpp
src/unit-test/: CMakeLists.txt  TChem_Test_Driver.cpp  TChem_Test_ReactionRates.hpp  TChem_Test_ThermalProperties.hpp  TChem_Test_Util.hpp
(+350 files in other folders)
