FILE(GLOB TCHEM_HDR "*.hpp"
                    "impl/*.hpp"
                    "problems/*.hpp")
FILE(GLOB TCHEM_SRC "*.cpp")

ADD_LIBRARY(tchemcore ${TCHEM_SRC})

TARGET_LINK_LIBRARIES(tchemcore
  ${TCHEM_INTERNAL_KOKKOS_TARGET}
  ${TCHEM_INTERNAL_KOKKOSKERNELS_TARGET}
  ${TCHEM_INTERNAL_OPENBLAS_TARGET})

TARGET_INCLUDE_DIRECTORIES(tchemcore
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/impl
  ${CMAKE_CURRENT_SOURCE_DIR}/problems)

INSTALL(TARGETS tchemcore LIBRARY
  ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/${TCHEM_INSTALL_LIB_PATH}"
  DESTINATION "${CMAKE_INSTALL_PREFIX}/${TCHEM_INSTALL_LIB_PATH}"
  COMPONENT Libraries)

INSTALL(FILES ${TCHEM_HDR}
  DESTINATION "${CMAKE_INSTALL_PREFIX}/${TCHEM_INSTALL_INCLUDE_PATH}"
  COMPONENT Headers)
