# PYBIND
ADD_SUBDIRECTORY(pybind11)
PYBIND11_ADD_MODULE(pytchem TChem_PyTChem.cpp)
TARGET_LINK_LIBRARIES(pytchem PUBLIC tchem)

INSTALL(TARGETS pytchem 
  EXPORT pytchem-targets
  LIBRARY DESTINATION "${TCHEM_INSTALL_LIB_PATH}"
  ARCHIVE DESTINATION "${TCHEM_INSTALL_LIB_PATH}"
)

INSTALL(EXPORT pytchem-targets
  DESTINATION "${TCHEM_INSTALL_LIB_PATH}/cmake/TChem"
  NAMESPACE TChem::
)
